--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,6 +19,11 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="PushSwitch" parent="Theme.MaterialComponents.CompactMenu">
+        <item name="colorControlActivated">@color/app_blue</item>
+        <item name="colorSwitchThumbNormal">#f1f1f1</item>
+        <item name="android:colorForeground">#42221f1f</item>
+    </style>
     <style name="Theme.WiUH.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.WiUH.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
