--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,7 +21,7 @@
                 android:layout_height="100dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="60dp"
-                android:src="@drawable/login_testImage" />
+                android:src="@drawable/login_testimage" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -122,16 +122,17 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="12dp"
-            android:text="Forgot password?"
+            android:text="비밀번호 찾기"
             android:textColor="#1566e0"
             android:textSize="10.5sp" />
+
         <TextView
             android:id="@+id/signin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="12dp"
-            android:text="Sign in"
+            android:text="회원가입"
             android:textColor="#1566e0"
             android:textSize="10.5sp" />
 
@@ -152,7 +153,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
-                android:text="or"
+                android:text="소셜 로그인으로 시작하기"
                 android:textColor="#aeaeae"
                 android:textSize="13.3sp"/>
         </LinearLayout>
