--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -134,7 +134,9 @@
             android:layout_marginTop="12dp"
             android:text="회원가입"
             android:textColor="#1566e0"
-            android:textSize="10.5sp" />
+            android:textSize="10.5sp"
+            android:onClick="clickSignin"
+            />
 
     </LinearLayout>
     <LinearLayout
