--- a/app/src/main/res/layout/activity_initial_setup.xml
+++ b/app/src/main/res/layout/activity_initial_setup.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".InitialSetupActivity">
+    tools:context=".InitialSetupActivity"
+    >
 
 
     <ImageView
@@ -60,6 +61,7 @@
         app:layout_constraintBottom_toTopOf="@+id/line1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nickname_edit" />
+
     <View
         android:id="@+id/line1"
         android:layout_width="match_parent"
@@ -126,8 +128,8 @@
 
     <TextView
         android:id="@+id/appinfo"
-        android:layout_width="51dp"
-        android:layout_height="25dp"
+        android:layout_width="68dp"
+        android:layout_height="24dp"
         android:layout_marginStart="16dp"
         android:layout_marginBottom="9dp"
         android:text="앱 정보"
@@ -152,6 +154,7 @@
         android:id="@+id/GoToMain"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/app_blue"
         android:text="Button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
