--- a/app/src/main/res/layout/fragment_community.xml
+++ b/app/src/main/res/layout/fragment_community.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".ui.community.CommunityFragment">
 
+
+    <!--원래 있던 textview, 없애도될듯 없앨라면 CommunityFragment도 고쳐야하는듯-->
     <TextView
-        android:id="@+id/text_community"
+        android:id="@+id/community_memo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -15,8 +18,41 @@
         android:layout_marginEnd="8dp"
         android:textAlignment="center"
         android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="이곳에서 \n작성된 게시판이에요!"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:paddingTop="30dp"
+        android:paddingLeft="10dp"
+        android:paddingBottom="10dp"
+        android:background="#1566e0"
+        android:textColor="#ffffff"/>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <!--게시판 글 리스트 -->
+        <ListView
+            android:id="@+id/community_listView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
+
+
+        <!-- 플로팅 버튼 -->
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/addPost_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|bottom"
+            app:fabSize="normal"
+            app:srcCompat="@drawable/plus"
+            android:layout_margin="16dp" />
+    </FrameLayout>
+
+
+
+
+</LinearLayout>
