--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
             android:layout_marginTop="30dp"
-            android:text="아이디"
+            android:text="이메일"
             android:textColor="@color/black" />
 
         <LinearLayout
@@ -50,8 +50,8 @@
                     android:layout_height="40dp"
                     android:layout_marginLeft="15dp"
                     android:background="@android:color/transparent"
-                    android:hint="아이디를 입력해주세요"
-                    android:inputType="text"
+                    android:hint="이메일을 입력해주세요"
+                    android:inputType="textEmailAddress"
                     android:maxLines="1"
                     android:textCursorDrawable="@drawable/login_cursor_color"
                     android:textSize="15sp" />
@@ -114,7 +114,9 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
             android:background="@drawable/login_blue_border_rounded_cornwe">
-
+            <FrameLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
             <EditText
                 android:id="@+id/signin_check_password"
                 android:layout_width="250dp"
@@ -127,71 +129,16 @@
                 android:maxLines="1"
                 android:textCursorDrawable="@drawable/login_cursor_color"
                 android:textSize="15sp" />
+                <ImageView
+                    android:id="@+id/setImage"
+                    android:layout_width="67dp"
+                    android:layout_height="45dp"
+                    android:layout_weight="1.5"
+                    android:layout_marginLeft="200dp"
+                    android:scaleType="fitStart" />
+            </FrameLayout>
         </RelativeLayout>
 
-
-        <ImageView
-            android:id="@+id/setImage"
-            android:layout_width="67dp"
-            android:layout_height="45dp"
-            android:layout_weight="1.5"
-            android:scaleType="fitStart" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="20dp"
-            android:text="이메일"
-            android:textColor="@color/black" />
-
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:background="@drawable/login_blue_border_rounded_cornwe">
-
-            <EditText
-                android:id="@+id/signin_email"
-                android:layout_width="250dp"
-                android:layout_height="40dp"
-                android:layout_marginLeft="15dp"
-                android:background="@android:color/transparent"
-                android:hint="이메일을 입력해주세요"
-                android:inputType="textEmailAddress"
-                android:maxLength="10"
-                android:maxLines="1"
-                android:textCursorDrawable="@drawable/login_cursor_color"
-                android:textSize="15sp" />
-        </RelativeLayout>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="20dp"
-            android:text="닉네임"
-            android:textColor="@color/black" />
-
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:background="@drawable/login_blue_border_rounded_cornwe">
-
-            <EditText
-                android:id="@+id/signin_nickname"
-                android:layout_width="250dp"
-                android:layout_height="40dp"
-                android:layout_marginLeft="15dp"
-                android:background="@android:color/transparent"
-                android:hint="닉네임을 입력해주세요"
-                android:inputType="text"
-                android:maxLength="10"
-                android:maxLines="1"
-                android:textCursorDrawable="@drawable/login_cursor_color"
-                android:textSize="15sp" />
-        </RelativeLayout>
 
         <TextView
             android:id="@+id/sighin_submit"
