--- a/app/src/main/res/layout/fragment_community.xml
+++ b/app/src/main/res/layout/fragment_community.xml
@@ -10,8 +10,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_width="413dp"
+        android:layout_height="568dp"
         android:scrollbarFadeDuration="0"
         android:scrollbarSize="5dp"
         android:scrollbarThumbVertical="@android:color/darker_gray"
@@ -20,6 +20,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
         app:layout_constraintVertical_weight="9" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -27,9 +28,12 @@
         android:layout_width="84dp"
         android:layout_height="76dp"
         android:layout_gravity="end|bottom"
-        android:layout_marginEnd="30dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="24dp"
         android:contentDescription="@string/add_post"
-        app:fabSize="normal"
+        android:translationZ="10dp"
+        app:backgroundTint="@color/grey"
+        app:fabCustomSize="76dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline2"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/plus" />
@@ -39,6 +43,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="607dp" />
+        app:layout_constraintGuide_begin="585dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
