--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
             android:layout_marginTop="30dp"
-            android:text="아이디"
+            android:text="이메일"
             android:textColor="@color/black" />
 
         <LinearLayout
@@ -58,16 +58,6 @@
             </RelativeLayout>
 
 
-            <TextView
-                android:id="@+id/signin_id_check"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:background="@drawable/login_blue_fill__rounded_color"
-                android:padding="10dp"
-                android:text="중복확인"
-                android:textColor="#ffffff"
-                android:textSize="15sp" />
         </LinearLayout>
 
         <TextView
@@ -115,6 +105,13 @@
             android:layout_marginLeft="15dp"
             android:background="@drawable/login_blue_border_rounded_cornwe">
 
+            <ImageView
+                android:id="@+id/setImage"
+                android:layout_width="67dp"
+                android:layout_height="45dp"
+                android:layout_toRightOf="@id/signin_check_password"
+                android:scaleType="fitStart" />
+
             <EditText
                 android:id="@+id/signin_check_password"
                 android:layout_width="250dp"
@@ -130,68 +127,17 @@
         </RelativeLayout>
 
 
-        <ImageView
-            android:id="@+id/setImage"
-            android:layout_width="67dp"
-            android:layout_height="45dp"
-            android:layout_weight="1.5"
-            android:scaleType="fitStart" />
-
-        <TextView
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
-            android:layout_marginTop="20dp"
-            android:text="이메일"
-            android:textColor="@color/black" />
+            android:background="@drawable/login_blue_border_rounded_cornwe"/>
 
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
-            android:background="@drawable/login_blue_border_rounded_cornwe">
-
-            <EditText
-                android:id="@+id/signin_email"
-                android:layout_width="250dp"
-                android:layout_height="40dp"
-                android:layout_marginLeft="15dp"
-                android:background="@android:color/transparent"
-                android:hint="이메일을 입력해주세요"
-                android:inputType="textEmailAddress"
-                android:maxLength="10"
-                android:maxLines="1"
-                android:textCursorDrawable="@drawable/login_cursor_color"
-                android:textSize="15sp" />
-        </RelativeLayout>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="20dp"
-            android:text="닉네임"
-            android:textColor="@color/black" />
-
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:background="@drawable/login_blue_border_rounded_cornwe">
-
-            <EditText
-                android:id="@+id/signin_nickname"
-                android:layout_width="250dp"
-                android:layout_height="40dp"
-                android:layout_marginLeft="15dp"
-                android:background="@android:color/transparent"
-                android:hint="닉네임을 입력해주세요"
-                android:inputType="text"
-                android:maxLength="10"
-                android:maxLines="1"
-                android:textCursorDrawable="@drawable/login_cursor_color"
-                android:textSize="15sp" />
-        </RelativeLayout>
+            android:background="@drawable/login_blue_border_rounded_cornwe"/>
 
         <TextView
             android:id="@+id/sighin_submit"
