--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -165,6 +165,13 @@
             android:layout_marginBottom="35dp"
             android:gravity="center"
             android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btn_google_login"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="google"/>
+
             <ImageView
                 android:id="@+id/fb_button"
                 android:layout_width="26.7dp"
