--- a/app/src/main/res/layout/fragment_community.xml
+++ b/app/src/main/res/layout/fragment_community.xml
@@ -9,7 +9,7 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/community_recyclerView"
         android:layout_width="413dp"
         android:layout_height="568dp"
         android:scrollbarFadeDuration="0"
