--- a/app/src/main/res/layout/activity_bulletin.xml
+++ b/app/src/main/res/layout/activity_bulletin.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BulletinActivity">
+    tools:context=".ui.community.BulletinActivity">
 
     <TextView
         android:id="@+id/bulletinTitle"
