--- a/app/src/main/res/layout/activity_modify_memo.xml
+++ b/app/src/main/res/layout/activity_modify_memo.xml
@@ -6,8 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".nav.memo.MemoActivity">
 
-    <TextView
-        android:id="@+id/memoTitle"
+    <EditText
+        android:id="@+id/mod_memoTitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="223dp"
@@ -19,8 +19,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/memoBody"
+    <EditText
+        android:id="@+id/mod_memoBody"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="475dp"
@@ -31,27 +31,27 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/memoTitle" />
+        app:layout_constraintTop_toBottomOf="@+id/mod_memoTitle" />
 
     <Button
-        android:id="@+id/del_Button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="삭제"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/mod_button"
+        android:id="@+id/ok_mod_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="수정"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/del_Button" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/cancel_mod_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="취소"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ok_mod_button" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
