--- a/app/src/main/res/layout/activity_bulletin.xml
+++ b/app/src/main/res/layout/activity_bulletin.xml
@@ -69,8 +69,20 @@
         android:text="Delete"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.264"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bulletinUid" />
+        app:layout_constraintTop_toBottomOf="@+id/bulletinUid"
+        app:layout_constraintVertical_bias="0.542" />
+
+    <Button
+        android:id="@+id/btn_modpost"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="32dp"
+        android:text="Modify"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btn_delpost" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
