--- a/app/src/main/res/layout/fragment_memo.xml
+++ b/app/src/main/res/layout/fragment_memo.xml
@@ -3,7 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".nav.memo.MemoFragment">
+
 <com.google.android.material.floatingactionbutton.FloatingActionButton
     android:id="@+id/addMemo_btn"
     android:layout_width="wrap_content"
@@ -12,8 +14,11 @@
     android:layout_alignParentRight="true"
     android:layout_marginBottom="90dp"
     android:layout_marginRight="30dp"
+    android:translationZ="10dp"
     android:layout_gravity="bottom|end"
-    android:src="@drawable/plus">
+    android:src="@drawable/plus"
+    app:backgroundTint="@color/grey"
+    >
 </com.google.android.material.floatingactionbutton.FloatingActionButton>
 
    <androidx.recyclerview.widget.RecyclerView
