--- a/app/src/main/res/menu/menu_option.xml
+++ b/app/src/main/res/menu/menu_option.xml
@@ -9,7 +9,12 @@
 
     <item
         android:id="@+id/goNotification"
-        android:title="알림설정"
+        android:title="알림목록"
+        app:showAsAction="never"></item>
+
+    <item
+        android:id="@+id/personalSettings"
+        android:title="개인설정"
         app:showAsAction="never"></item>
 
 </menu>
