--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="darkgrey">#616161</color>
     <color name="app_blue">#1566e0</color>
 
+    <color name="sky_blue">#33b5e5</color>
     <color name="gray">#cdc9c3</color>
     <color name="green">#a9d18e</color>
     <color name="lightgreen">#cfffa5</color>
