--- a/app/src/main/res/layout/activity_add_memo.xml
+++ b/app/src/main/res/layout/activity_add_memo.xml
@@ -13,9 +13,9 @@
         android:gravity="center_horizontal"
         android:padding="20dp"
         android:text="메모 작성"
-        android:textStyle="bold"
         android:textColor="#ffffff"
-        android:textSize="25sp" />
+        android:textSize="25sp"
+        android:textStyle="bold" />
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar_add_memo"
