--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -4,11 +4,19 @@
     <item
         android:id="@+id/navigation_memo"
         android:icon="@drawable/ic_baseline_list_alt_24"
+        android:enabled="true"
         android:title="Memo" />
 
     <item
         android:id="@+id/navigation_community"
         android:icon="@drawable/ic_baseline_textsms_24"
+        android:enabled="true"
         android:title="Community" />
+
+    <item
+        android:id="@+id/navigation_setting"
+        android:icon="@drawable/ic_baseline_textsms_24"
+        android:enabled="true"
+        android:title="Setting" />
 
 </menu>
