--- a/app/src/main/res/drawable/profile_image_border.xml
+++ b/app/src/main/res/drawable/profile_image_border.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="oval">
-    <solid android:color="#FFFFFF"/>
-    <stroke android:color="#c0d6f7" android:width="3dp"/>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="oval">
+    <solid android:color="#FFFFFF" />
+    <stroke
+        android:width="3dp"
+        android:color="#c0d6f7" />
 </shape>
