--- a/app/src/main/res/layout/activity_add_post.xml
+++ b/app/src/main/res/layout/activity_add_post.xml
@@ -3,23 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".nav.community.AddPostActivity">
+    tools:context=".ui.community.AddPostActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#1566e0"
-            android:gravity="center_horizontal"
-            android:padding="20dp"
-            android:text="게시글 작성"
-            android:textStyle="bold"
-            android:textColor="#ffffff"
-            android:textSize="25sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -43,18 +32,17 @@
         </LinearLayout>
 
 
-
         <EditText
             android:id="@+id/et_postBody"
             android:layout_width="match_parent"
             android:layout_height="500dp"
-            android:hint="내용을 입력하세요"
-            android:gravity="top|left"
-            android:paddingTop="10dp"
-            android:paddingLeft="10dp"
             android:background="#faf7f7"
+            android:gravity="top|left"
+            android:hint="내용을 입력하세요"
             android:inputType="textMultiLine"
-            android:minHeight="48dp" />
+            android:minHeight="48dp"
+            android:paddingLeft="10dp"
+            android:paddingTop="10dp" />
 
         <Button
             android:id="@+id/btn_submitPost"
@@ -63,7 +51,7 @@
             android:layout_marginLeft="62dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="62dp"
-            android:backgroundTint="#1566e0"
+            android:backgroundTint="@color/sky_blue"
             android:gravity="center"
             android:paddingTop="14dp"
             android:paddingBottom="14dp"
