--- a/app/src/main/res/layout/activity_modify_bulletin.xml
+++ b/app/src/main/res/layout/activity_modify_bulletin.xml
@@ -1,49 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".nav.community.PostActivity">
+    tools:context=".ui.community.PostDetailActivity">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-    <EditText
-        android:id="@+id/mod_bulletinTitle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Title"
-        android:textColor="@color/black"
-        android:textSize="25dp"
-        android:layout_marginLeft="20dp"/>
 
-    <EditText
-        android:id="@+id/mod_bulletinBody"
-        android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:text="Body"
-        android:textColor="@color/black"
-        android:textSize="20dp"
-        android:layout_marginLeft="20dp" />
+        <EditText
+            android:id="@+id/mod_bulletinTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:text="Title"
+            android:textColor="@color/black"
+            android:textSize="25dp" />
+
+        <EditText
+            android:id="@+id/mod_bulletinBody"
+            android:layout_width="match_parent"
+            android:layout_height="400dp"
+            android:layout_marginLeft="20dp"
+            android:text="Body"
+            android:textColor="@color/black"
+            android:textSize="20dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <Button
                 android:id="@+id/btn_ok_mod"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="110dp"
-                android:text="수정"
-                />
+                android:text="수정" />
+
             <Button
                 android:id="@+id/btn_cancel_mod"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:text="취소"
-                 />
+                android:text="취소" />
         </LinearLayout>
 
     </LinearLayout>
