--- a/app/src/main/res/layout/activity_setup_list.xml
+++ b/app/src/main/res/layout/activity_setup_list.xml
@@ -4,10 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SetupListActivity">
+    tools:context=".activities.SetupListActivity">
 
     <TextView
-        android:id="@+id/textView"
         android:layout_width="0dp"
         android:layout_height="102dp"
         android:gravity="center"
