--- a/app/src/main/res/layout/item_community.xml
+++ b/app/src/main/res/layout/item_community.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -17,8 +16,8 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:text="이름"
-            android:textSize="16sp"
-            android:textColor="#000"/>
+            android:textColor="#000"
+            android:textSize="16sp" />
 
 
     </LinearLayout>
@@ -28,6 +27,6 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginHorizontal="10dp"
-        android:background="#aaa"/>
+        android:background="#aaa" />
 
 </LinearLayout>
