--- a/app/src/main/res/layout/memo_layout.xml
+++ b/app/src/main/res/layout/memo_layout.xml
@@ -1,59 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="15dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:padding="15dp">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:elevation="5dp"
         app:cardCornerRadius="5dp"
-        app:cardMaxElevation="5dp"
-        android:id="@+id/memocard">
+        app:cardMaxElevation="5dp">
 
         <LinearLayout
+            android:id="@+id/memo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/memo"
             android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
+
                 <TextView
                     android:id="@+id/memo_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:paddingLeft="10dp"
                     android:paddingTop="10dp"
                     android:paddingRight="10dp"
                     android:text="This is memo"
-                    android:textSize="20sp"
                     android:textColor="@color/black"
-                    android:layout_weight="1"
-                    android:paddingLeft="10dp"/>
+                    android:textSize="20sp" />
+
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:id="@+id/memo_menu_btn"
                     android:layout_weight="0"
-                    android:src="@drawable/ic_baseline_more_vert_24"/>
+                    android:src="@drawable/ic_baseline_more_vert_24" />
 
 
             </LinearLayout>
+
             <TextView
                 android:id="@+id/memo_content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingBottom="20dp"
                 android:paddingLeft="10dp"
-                android:paddingRight="10dp"
                 android:paddingTop="10dp"
+                android:paddingRight="10dp"
+                android:paddingBottom="20dp"
                 android:text="This is content"
-                android:textSize="15sp"
-                android:textColor="@color/black"/>
+                android:textColor="@color/black"
+                android:textSize="15sp" />
         </LinearLayout>
 
 
