--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,11 +12,9 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
-    </style>
-
-    <style name="Theme.WiUH.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
+        <item name="android:windowSplashScreenBackground">@color/white</item>
+        <item name="android:windowSplashScreenAnimatedIcon">@drawable/avd_anim</item>
+        <item name="android:windowSplashScreenAnimationDuration">1000</item>
     </style>
 
     <style name="PushSwitch" parent="Theme.MaterialComponents.CompactMenu">
@@ -25,7 +23,4 @@
         <item name="android:colorForeground">#42221f1f</item>
     </style>
 
-    <style name="Theme.WiUH.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-
-    <style name="Theme.WiUH.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
